new branch and work in it

--- a/index.html
+++ b/index.html
@@ -9,5 +9,9 @@
     <p>Git + GitHub</p>
     <h1>Hello</h1>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illum excepturi necessitatibus optio nesciunt, corrupti quas placeat obcaecati reprehenderit facere nihil odio quo impedit repudiandae voluptatibus blanditiis repellat harum! Doloribus, iure?</p>
+    <p>Git + GitHub</p>
+    <h1>Hello</h1>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illum excepturi necessitatibus optio nesciunt, corrupti quas placeat obcaecati reprehenderit facere nihil odio quo impedit repudiandae voluptatibus blanditiis repellat harum! Doloribus, iure?</p>
+
 </body>
 </html>
